--- a/templates/views/404.ejs
+++ b/templates/views/404.ejs
@@ -7,6 +7,6 @@
 
 <body>
     <%- include('../partials/navigation.ejs') %>
-    <h1>Page Not Found!</h1>
+    <h1><%= url %> Not Found!</h1>
     
 <%- include('../partials/end.ejs') %>
