--- a/templates/partials/navigation.ejs
+++ b/templates/partials/navigation.ejs
@@ -4,6 +4,7 @@
             <li class="main-header__item"><a class="<%= path === 'shop' ? 'active' : '' %>" href="/">Shop</a></li>
             <li class="main-header__item"><a class="<%= path === 'products' ? 'active' : '' %>" href="/products">Products</a></li>
             <li class="main-header__item"><a class="<%= path === 'cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
+            <li class="main-header__item"><a class="<%= path === 'orders' ? 'active' : '' %>" href="/orders">Orders</a></li>
             <li class="main-header__item"><a class="<%= path === 'addProduct' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
             <li class="main-header__item"><a class="<%= path === 'adminProduct' ? 'active' : '' %>" href="/admin/products">Admin Product</a></li>
         </ul>
