--- a/templates/views/shop/product-detail.ejs
+++ b/templates/views/shop/product-detail.ejs
@@ -11,8 +11,6 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="POST">
-                <button class="btn" type="submit">Add to cart</button>
-            </form>
+            <%- include('../../partials/add-to-cart.ejs', {product}) %>
         </main>
         <%- include('../../partials/end.ejs') %>
