--- a/templates/views/shop/cart.ejs
+++ b/templates/views/shop/cart.ejs
@@ -10,10 +10,10 @@
                     <% cartProd.forEach(cartSingleProd => { %>
                         <li class="cart__item">
                             <p>
-                                <%= cartSingleProd.title %> (<%= cartSingleProd.quantity %>)
+                                <%= cartSingleProd.prodId.title %> (<%= cartSingleProd.quantity %>)
                             </p>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" value="<%= cartSingleProd._id %>" name="productId">
+                                <input type="hidden" value="<%= cartSingleProd.prodId._id %>" name="productId">
                                 <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
